# omics-tools

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
bam-util/: Cargo.toml
bam-util/src/: lib.rs  main.rs
bam-util/src/bam/: mod.rs
bam-util/src/bam_cmd/: filter.rs
omics-tools-clj/: CHANGELOG.md  README.md  project.clj
omics-tools-clj/doc/: intro.md
omics-tools-clj/src/omics_tools_clj/: core.clj
omics-tools-clj/test/omics_tools_clj/: core_test.clj
src/: lib.rs
src/bam/: cigar.rs  mod.rs
src/utils/: bam_cigar.rs  bam_filter_exp.rs  mod.rs
src/vcf/: convertor.rs  mod.rs
vcf-util/: Cargo.toml  README.md
vcf-util/src/: lib.rs  main.rs
vcf-util/src/vcf/: convertor.rs  util.rs
vcf-util/src/vcf_cmd/: makedb.rs
