[package]
name = "omics-tools"
license = "MIT"
description = "A suite of programs for interacting with high-throughput sequencing data. e.g. Fastq/Bam/VCF File."
version = "0.1.0"
authors = ["Jingcheng Yang <yjcyxky@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rust-htslib = "0.32.0"
rayon = "1.4.0"
regex = "1.3.9"
lazy_static = "1.4.0"
exitcode = "1.1.2"
log = "0.4.11"
stderrlog = "0.4.3"
structopt = "0.3.17"
vcf = "0.5.0"
flate2 = "1.0.19"
rusqlite = "0.24"

[dev-dependencies]


[profile.release]
debug=true