[package]
name = "bam-util"
license = "MIT"
description = "A suite of programs for interacting with BAM File."
version = "0.1.0"
authors = ["Jingcheng Yang <yjcyxky@163.com>"]
edition = "2018"

[lib]
name = "bam_util" 
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
rust-htslib = "0.35.2"
regex = "1.3.9"
lazy_static = "1.4.0"
exitcode = "1.1.2"
log = "0.4.11"
stderrlog = "0.4.3"
structopt = "0.3.17"

[dev-dependencies]

[profile.release]
debug=true
