[package]
name = "vcf-util"
license = "MIT"
description = "A suite of programs for interacting with VCF File."
version = "0.1.0"
authors = ["Jingcheng Yang <yjcyxky@163.com>"]
edition = "2018"

[lib]
name = "vcf_util" 
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
regex = "1.3.9"
lazy_static = "1.4.0"
exitcode = "1.1.2"
log = "0.4.11"
stderrlog = "0.4.3"
structopt = "0.3.17"
vcf = "0.5.0"
rusqlite = { version = "0.24", features = ["bundled"] }
flate2 = { version = "1.0.19", features = ["cloudflare_zlib"], default-features = false}

[dev-dependencies]

[profile.release]
debug=true
